--- a/scatterplot.html
+++ b/scatterplot.html
@@ -59,6 +59,11 @@ var labels = svg.selectAll("text").data(monthlySales).enter().append("text").tex
     "fill": "#666666",
     "text-anchor": "start"
   });
+
+d3.select("select").on("change", function(d) {
+  var sel=d3.select("#label-option").node().value;
+  svg.selectAll("text").data(monthlySales).text(function(d){return showMinMax(monthlySales, 'sales', d.sales, sel);})
+    });
 </script>
 </body>
 </html>
